<resources>
    <string name="app_name">Прогноз погоды</string>
    <string name="error">Ошибка</string>
    <string name="reload">Обновить</string>
    <string name="celsius">°С</string>
    <string name="by_feelings">По ощущениям\u0020</string>
    <string name="mm">мм</string>
    <string name="ms">м/с</string>
    <string name="sunrise">восход</string>
    <string name="subset">закат</string>
    <string name="wind">ветер</string>
    <string name="pressure">давление</string>
    <string name="humidity">влажность</string>
    <string name="water">воды</string>
    <string name="rainfall">осадки</string>
    <string name="forecast_on">Прогноз на\u0020</string>
    <string name="max">max</string>
    <string name="latitude">Широта=</string>
    <string name="longitude">Долгота=</string>
    <string name="coordinates">ш=%1$s, д=%2$s</string>
    <string name="select_a_place">Выберите город:</string>
    <string name="history">История просмотров:</string>
    <string name="my_place">Моё место</string>
    <string name="coordinates_by_gps">Координаты определены по GPS</string>
    <string name="coordinates_by_network">Координаты определены по сети</string>
    <string name="geolocation_permission">Для работы геолокации нужно дать приложению разрешение</string>
    <string name="default_location_language">RU</string>
    <string name="permission_granted">Разрешение получено</string>
    <string name="check_internet">Проверьте, что программе предоставлен доступ к интернету</string>
    <string name="no_answer">Сервер не отвечает</string>
    <string name="data_from_web">Данные из сети</string>
    <string name="data_from_cache">Данные из кэша</string>
    <string name="menu_title_history">История</string>
    <string name="menu_title_map">Карты</string>
    <string name="google_maps_key">AIzaSyBIN6nT5nOwWfPDGrpGIDrMke4SqzzGr0Q</string>
    <string name="find_button_text">Найти</string>
    <string name="empty_adress_message">Сначала необходимо ввести адрес</string>
    <string name="alarm_channel_name">Сообщения МЧС</string>
    <string name="alarm_channel_description">Предупреждение о погодных аномалиях</string>
    <string name="attention">Внимание</string>
    <string name="attention_desc">Получено предупреждение</string>

</resources>