<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Weather.Forecast.Header"
            android:text="@string/forecast_on"/>

        <TextView
            android:id="@+id/part_name"
            style="@style/Weather.Forecast.Header"
            android:text="вечер"/>
        <TextView
            style="@style/Weather.Forecast.Header"
            android:text=":"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                style="@style/Weather.Now.Image"
                android:src="@drawable/day_clear" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Weather.Now.Image.Forecast"
                        android:src="@drawable/thermometer_forecast" />
                    <TextView
                        style="@style/Weather.Forecast.FirstLine.Temperature.Attr"
                        android:text="@string/max"/>

                    <TextView
                        android:id="@+id/temp_max"
                        style="@style/Weather.Forecast.FirstLine.Temperature"
                        android:text="7"/>

                    <TextView
                        style="@style/Weather.Forecast.FirstLine.Temperature"
                        android:text="@string/celsius"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/Weather.Now.Image.Forecast"
                        android:src="@drawable/thermometer_forecast" />
                    <TextView
                        style="@style/Weather.Forecast.FirstLine.Temperature.Attr"
                        android:text="min"/>

                    <TextView
                        android:id="@+id/temp_min"
                        style="@style/Weather.Forecast.FirstLine.Temperature"
                        android:text="7"/>

                    <TextView
                        style="@style/Weather.Forecast.FirstLine.Temperature"
                        android:text="@string/celsius"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Weather.Forecast.FirstLine.Feelings"
                        android:text="@string/by_feelings" />

                    <TextView
                        android:id="@+id/temperature_feels"
                        style="@style/Weather.Forecast.FirstLine.Feelings"
                        android:text="+7" />

                    <TextView
                        style="@style/Weather.Forecast.FirstLine.Feelings"
                        android:text="°C" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:orientation="vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/Weather.Now.Image"
                android:src="@drawable/wind" />

            <TextView
                style="@style/Weather.Forecast.SecondLine.Desc"
                android:text="@string/wind"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/direction_left" />

                <TextView
                    android:id="@+id/wind_speed"
                    style="@style/Weather.Forecast.SecondLine.Numbers"
                    android:text="7"/>

                <TextView
                    style="@style/Weather.Forecast.SecondLine.Numbers.Desc"
                    android:text="@string/ms"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/Weather.Now.Image"
                android:src="@drawable/barometer" />

            <TextView
                style="@style/Weather.Forecast.SecondLine.Desc"
                android:text="@string/pressure"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/pressure"
                    style="@style/Weather.Forecast.SecondLine.Numbers"
                    android:text="760"/>

                <TextView
                    style="@style/Weather.Forecast.SecondLine.Numbers.Desc"
                    android:text="@string/mm"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/Weather.Now.Image"
                android:src="@drawable/humidity" />

            <TextView
                style="@style/Weather.Forecast.SecondLine.Desc"
                android:text="@string/humidity"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/humidity"
                    style="@style/Weather.Forecast.SecondLine.Numbers"
                    android:text="93"/>

                <TextView
                    style="@style/Weather.Forecast.SecondLine.Numbers.Desc"
                    android:text="%"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                style="@style/Weather.Now.Image"
                android:src="@drawable/raindrop" />

            <TextView
                style="@style/Weather.Forecast.SecondLine.Desc"
                android:text="@string/rainfall"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/rain_falls"
                    style="@style/Weather.Forecast.SecondLine.Numbers"
                    android:text="6"/>

                <TextView
                    style="@style/Weather.Forecast.SecondLine.Numbers.Desc"
                    android:text="@string/mm"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>